--- a/chatting_tool/CMakeLists.txt
+++ b/chatting_tool/CMakeLists.txt
@@ -1,12 +1,9 @@
-cmake_minimum_required(VERSION 3.18 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
 
-project(ChattingTool LANGUAGES C VERSION 1.0)
+project(ChattingTool VERSION 1.0)
 
 include_directories(include)
 
 add_subdirectory(source)
 
-<<<<<<< HEAD
 add_subdirectory(source_cpp)
-=======
->>>>>>> ee3fae7... Add Cmake, Catch signal
