--- a/chatting_tool/source_cpp/CMakeLists.txt
+++ b/chatting_tool/source_cpp/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(ChatServer_cpp ChatServer.c)
+add_executable(ChatServer_cpp ChatServer_cpp.cpp)
 
-add_executable(ChatClient_cpp ChatClient.c)
+add_executable(ChatClient_cpp ChatClient_cpp.cpp)
